# pkr-tnf

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: model.yaml  model_cards.yaml  model_postln.yaml  tokenizer.yaml  training.yaml  training_bf16.yaml  training_cards.yaml  training_postln.yaml  training_smoke.yaml
data/processed/: vocab.json
data/processed/self_play/: manifest.json  self_play_00000.pt  self_play_00001.pt  self_play_00002.pt  self_play_00003.pt  self_play_00004.pt  self_play_00005.pt  (+94 more)
demo/: README.md  requirements.txt  setting.py
demo/app/: auction.py  game_class.py  game_settings.py  hand_history.py  poker_game.py  poker_round.py  split_pot.py  transformer_bot.py
demo/static/: menu.js
demo/templates/: menu.html
docs/: quantization_notes.md
eval/results/: baseline_eval.json  baseline_eval_50bb_mismatch.json
scripts/: launch_distributed.sh
src/engine_integration/: fish_player.py  transformer_player.py
src/eval/: __init__.py  rollout.py
src/model/: __init__.py  transformer.py
src/serving/: __init__.py  api.py  demo_adapter.py  export_onnx.py  inference.py  quantization_demo.py
src/tokenizer/: __init__.py  encode.py  hand_sequence.py  vocab.py
src/training/: __init__.py  data.py  distributed.py  evaluate_loss.py  metrics.py  profile_run.py  self_play.py  train.py
tests/: conftest.py  test_api.py  test_demo_adapter.py  test_demo_e2e.py  test_distributed.py  test_engine_smoke.py  test_kernel.py  test_model.py  test_rollout.py  test_tokenizer.py  test_training.py  test_transformer_player.py
(+9 files in other folders)
